# band-mcp

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claude.md  mcp_config_example.json  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release.yml
examples/: langchain_agent.py  langgraph_agent.py
src/band_mcp/: __init__.py  config.py  context.py  server.py  settings.py  shared.py
src/band_mcp/tools/: __init__.py  health.py  registrar.py  shims.py
src/band_mcp/tools/agent/: agent_chats.py  agent_contacts.py  agent_events.py  agent_identity.py  agent_lifecycle.py  agent_messages.py  agent_participants.py
src/band_mcp/tools/human/: human_agents.py  human_chats.py  human_contacts.py  human_messages.py  human_participants.py  human_profile.py
src/thenvoi_mcp/: __init__.py  config.py  server.py  shared.py
src/thenvoi_mcp/tools/: __init__.py  registrar.py
src/thenvoi_mcp/tools/agent/: agent_messages.py
src/thenvoi_mcp/tools/human/: human_agents.py
tests/: __init__.py  conftest.py  conftest_integration.py  generate_wire_snapshots.py  test_agent_contacts.py  test_chats.py  test_events.py  test_human_agents.py  test_human_chats.py  test_human_contacts.py  test_human_messages.py  test_human_participants.py  test_human_profile.py  test_identity.py  test_lifecycle.py  test_messages.py  test_participants.py  test_transport_security.py
tests/fixtures/wire_schemas/: full.json  pinned.json
tests/integration/: conftest.py  test_error_cases.py  test_forwarding.py  test_full_workflow.py  test_smoke.py
tests/unit/: __init__.py  test_config.py  test_context.py  test_registrar.py  test_server.py  test_shared.py  test_shims.py
