[project]
name = "band-mcp"
version = "1.3.0"
description = "Model Context Protocol (MCP) server for Band integration"
readme = "README.md"
authors = [{ name = "band" }]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.23.0",
    "pydantic-settings>=2.1.0",
    "band-client-rest>=0.0.10",
    "uvicorn>=0.30.0",  # Required for SSE transport mode
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "respx>=0.20.0",
    "band-testing-python>=0.1.4",
]
# LangGraph agent example dependencies
langgraph = [
    "langchain-core>=1.2.5",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]
# LangChain agent example dependencies
langchain = [
    "langchain-core>=1.2.5",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
    "python-dotenv>=1.0.0",
]
# All examples dependencies (convenience group)
examples = [
    "langchain-core>=1.2.5",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
band-mcp = "band_mcp.server:run"

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "band_mcp"
module-root = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--cov=src/band_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=20",
]

[tool.coverage.run]
source = ["src/band_mcp"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.1.0",
    "ruff>=0.8.0",
    "pyrefly>=0.2.0",
    "commitizen>=3.13.0",
]

[tool.pyrefly]
search_path = ["src", "tests"]
project_excludes = ["tests/**"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
version_files = [
    "pyproject.toml:version",
    "src/band_mcp/__init__.py:__version__",
]
tag_format = "v$version"
